--- a/index.html
+++ b/index.html
@@ -12,10 +12,17 @@
     <link rel="stylesheet" href="bootstrap/css/bootstrap-theme.min.css">
     <link rel="stylesheet" href="css/index.css">
     <title>Document</title>
+    <style>
+        .kuang {
+            width: 100px;
+            height: 100px;
+        }
+    </style>
 </head>
 
 <body>
     <div class="container">666</div>
+    <div class="kuang"></div>
 </body>
 
 </html>
